@@ -136,6 +136,10 @@
 		keywords could be "telephone phone directory book list".
 		Now, regardless of what text is actually in the document,
 		it can be found if these keywords are used in the search.
+		The weight that words in the content string will have in
+		search results is controlled by the
+		<a href="attrs.html#keywords_factor">
+		keywords_factor</a> attribute in your configuration.
 	  </dd>
 	  <dt>
 		<strong>htdig-noindex</strong>
@@ -235,6 +239,10 @@
 	  use_meta_description</a> is used, then any documents with
 	  descriptions will use them instead of the automatically
 	  generated excerpts.
+	  The weight that words in the content string will have in
+	  search results is controlled by the
+	  <a href="attrs.html#meta_description_factor">
+	  meta_description_factor</a> attribute in your configuration.
 	  </dd>
 	</dl>
 	<hr size="4" noshade>
