@@ -1,6 +1,7 @@
-Wed Nov 10 14:46:08 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+Wed Nov 10 14:54:20 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
 	* htdoc/meta.html: add description of "keywords" meta tag property.
+	add links to keywords_factor & meta_description_factor attributes.
 
 1999-11-10  Toivo Pedaste  <toivo@ucs.uwa.edu.au>
 
